tests/paczka1/fuzzy1/55373893.err
Error in line 9: HO6h1gmsI A818 30,0
Error in line 3: FyID S265 10,2
Error in line 16: FyID A364 11,5
Error in line 20: FyID S265 77,0
Error in line 23: 9VoWM3P S265 14,6
Error in line 38: 9VoWM3P A818 167,64
Error in line 39: 2fdg S265 88,5
